--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "glamor": "^2.20.40",
     "graphql": "^16.8.1",
     "gsap": "^3.8.0",
+    "html-to-pdfmake": "^2.5.10",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "pdfmake": "^0.2.10",
     "radium": "^0.26.1",
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
@@ -43,6 +45,7 @@
     "react-apexcharts": "^1.4.1",
     "react-arc-text-fix": "^0.0.0-development",
     "react-background-slideshow": "^1.0.4",
+    "react-barcode": "^1.5.3",
     "react-barcode-reader": "^0.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-icons": "^1.6.1",
