--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.7.0",
     "boxicons": "^2.0.9",
     "circletype": "^2.3.0",
+    "decimal.js": "^10.4.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^10.9.0",
