--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^5.1.0",
     "@steveeeie/react-page-transition": "^1.2.1",
     "@syncfusion/ej2-react-calendars": "^24.1.41",
