--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "glamor": "^2.20.40",
     "graphql": "^16.8.1",
     "gsap": "^3.8.0",
+    "html-loader": "^5.1.0",
     "html-to-pdfmake": "^2.5.10",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
