--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^5.1.0",
     "@steveeeie/react-page-transition": "^1.2.1",
+    "@syncfusion/ej2-react-barcode-generator": "^26.2.14",
     "@syncfusion/ej2-react-calendars": "^24.1.41",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -24,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
     "boxicons": "^2.0.9",
+    "bwip-js": "^4.5.1",
     "circletype": "^2.3.0",
     "decimal.js": "^10.4.3",
     "draft-js": "^0.11.7",
