--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gsap": "^3.8.0",
     "html-loader": "^5.1.0",
     "html-to-pdfmake": "^2.5.10",
+    "js-sha256": "^0.11.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pdfmake": "^0.2.10",
