--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DISABLE_ESLINT_PLUGIN=true
-baseLink = 'http://localhost:3001/graphql'
+REACT_APP_API_GQL = 'http://localhost:3001/graphql'
+REACT_APP_API_URL = 'http://localhost:3001'
 # https://greenlineco.site/graphql
