--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 DISABLE_ESLINT_PLUGIN=true
-REACT_APP_API_GQL = 'http://localhost:3001/graphql'
-REACT_APP_API_URL = 'http://localhost:3001'
+REACT_APP_API_GQL = 'https://greenlineco.site/graphql'
+REACT_APP_API_URL = 'https://greenlineco.site/'
+REACT_APP_API_GQL_LOCAL = 'http://localhost:3001/graphql'
+REACT_APP_API_URL_LOCAL = 'http://localhost:3001/'
+DEV="true"
+
 # https://greenlineco.site/graphql
