--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "gsap": "^3.8.0",
     "html-loader": "^5.1.0",
     "html-to-pdfmake": "^2.5.10",
+    "html2canvas": "^1.4.1",
     "js-sha256": "^0.11.0",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pdfmake": "^0.2.10",
