--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ REACT_APP_API_GQL = 'https://greenlineco.site/graphql'
 REACT_APP_API_URL = 'https://greenlineco.site/'
 REACT_APP_API_GQL_LOCAL = 'http://localhost:3001/graphql'
 REACT_APP_API_URL_LOCAL = 'http://localhost:3001/'
-DEV="true"
+REACT_APP_DEV_MODE='true'
 
 # https://greenlineco.site/graphql
