--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "boxicons": "^2.0.9",
     "bwip-js": "^4.5.1",
     "circletype": "^2.3.0",
+    "copy-to-clipboard": "^3.3.3",
     "decimal.js": "^10.4.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
