trial to fix sku print

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ REACT_APP_API_URL_LOCAL = 'http://localhost:3001/'
 # REACT_APP_API_URL_LOCAL = 'http://192.168.8.144:3001/'
 # REACT_APP_API_GQL_LOCAL = 'https://greenlineco.site/graphql'
 # REACT_APP_API_URL_LOCAL = 'https://greenlineco.site/'
-REACT_APP_DEV_MODE='true'
+REACT_APP_DEV_MODE='false'
 
 # https://greenlineco.site/graphql
+ 
