--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "formatDate": "^1.0.0",
     "formatdate": "^0.3.3",
     "glamor": "^2.20.40",
+    "google-libphonenumber": "^3.2.40",
     "graphql": "^16.8.1",
     "gsap": "^3.8.0",
     "html-loader": "^5.1.0",
@@ -74,6 +75,7 @@
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-icons": "^4.3.1",
     "react-images-uploading": "^3.1.3",
+    "react-international-phone": "^4.5.0",
     "react-intersection-observer": "^9.4.2",
     "react-loader-spinner": "^4.0.0",
     "react-lottie": "^1.2.3",
